@@ -3,6 +3,7 @@
 * IAuditProjection.GetData now returns Tuple<string, string, Boolean>
 * ICrossTypeRevisionChangesReader.FindEntityTypes now returns ISet<Tuple<string, System.Type>>
 * Non generic sets no longer part of ICollectionMapperFactory because NH Core no longer supports it.
+* AuditEntity.Id().Count("id") removed. Use AuditEntity.Id().Count() instead.
 
 
 === vNext ===
